--- a/bio13.html
+++ b/bio13.html
@@ -27,9 +27,13 @@
     }
     a {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 25px;
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
       text-decoration: none;
-      color: #007bff;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
     }
   </style>
 </head>
@@ -104,4 +108,5 @@
   </div>
 </body>
 </html>
+
 
