--- a/bio1.html
+++ b/bio1.html
@@ -43,7 +43,7 @@
       h2 {
       text-align: center;
       /*margin-top: 30px;*/
-      margin-bottom: 10px;
+      /*margin-bottom: 10px;*/
       font-size: 1.5em; /* optional for emphasis */
       color: navy;
     }
@@ -276,6 +276,7 @@
   </div>
 </body>
 </html>
+
 
 
 
