--- a/bio1.html
+++ b/bio1.html
@@ -42,8 +42,8 @@
 
       h2 {
       text-align: center;
-      /*margin-top: 30px;*/
-      /*margin-bottom: 10px;*/
+      margin-top: 5px;
+      margin-bottom: 5px;
       font-size: 1.5em; /* optional for emphasis */
       color: navy;
     }
@@ -276,6 +276,7 @@
   </div>
 </body>
 </html>
+
 
 
 
