--- a/bio1.html
+++ b/bio1.html
@@ -3,89 +3,42 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Great Martyr Saint George</title>
+  <title> El Fayoum Martyrs </title>
   <style>
-    /* Base Styles */
     body {
       font-family: Arial, sans-serif;
-      background-color: #f9f9f9; /*this light gray almost white*/
-      margin: 0;
-      padding: 40px 20px;
-      line-height: 1.6;
-      color: #000; /* #000 for solid black, #333 for light black*/
+      padding: 40px;
+      background: #f9f9f9;
     }
-
     .container {
-      max-width: 700px;
+      max-width: 600px;
       margin: 0 auto;
-      background-color: #fff;
-      padding: 30px 25px;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
-      text-align: center;
-    }
-
-    img {
-      width: 220px;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin: 20px 0;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-
-    h1 {
-      font-size: 28px;
-      line-height: 1.3;
-      margin-bottom: 10px;
-    }
-
-      h2 {
       text-align: center;
-      margin-top: 5px;
-      margin-bottom: 5px;
-      font-size: 1.5em; /* optional for emphasis */
-      color: navy;
     }
-
-    p {
-      font-size: 18px;
-      margin: 15px 0;
-      text-align: left;
+    img {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      margin-bottom: 20px;
     }
-
-    p.rtl {
-      text-align: right;
-      direction: rtl;
-      unicode-bidi: isolate;
-    }
-
-    strong {
-      font-weight: 600;
-    }
-
     a {
       display: inline-block;
-      margin-top: 25px;
-      padding: 8px 16px;
-      background-color: #007bff;
-      color: #fff;
+      margin-top: 20px;
       text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s ease;
-    }
-
-    a:hover {
-      background-color: #0056b3;
+      color: #007bff;
     }
   </style>
 </head>
 <body>
   <div class="container">
-   <h2>   شهداء الفيوم  </h2>
-    <h2>  (٨ يناير / ٢٩ كيهك)  </h2>
-    <h2>   El Fayoum Martyrs </h2>
-    <h2>   (8 Jan / 29 Kiahk) </h2>
+   <h1>   شهداء الفيوم  </h1>
+    <h1>  (٨ يناير / ٢٩ كيهك)  </h1>
+    <h1>   El Fayoum Martyrs </h1>
+    <h1>   (8 Jan / 29 Kiahk) </h1>
     <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Fayoum.jpg" alt="Fayoum">
 <div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">        
   <p>
@@ -276,11 +229,6 @@
   </div>
 </body>
 </html>
-
-
-
-
-
 
 
 
