--- a/bio1.html
+++ b/bio1.html
@@ -27,18 +27,22 @@
     }
     a {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 25px;
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
       text-decoration: none;
-      color: #007bff;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
     }
   </style>
 </head>
 <body>
   <div class="container">
-   <h1>   شهداء الفيوم  </h1>
-    <h1>  (٨ يناير / ٢٩ كيهك)  </h1>
-    <h1>   El Fayoum Martyrs </h1>
-    <h1>   (8 Jan / 29 Kiahk) </h1>
+   <h2>   شهداء الفيوم  </h2>
+    <h2>  (٨ يناير / ٢٩ كيهك)  </h2>
+    <h2>   El Fayoum Martyrs </h2>
+    <h2>   (8 Jan / 29 Kiahk) </h2>
     <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Fayoum.jpg" alt="Fayoum">
 <div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">        
   <p>
@@ -229,6 +233,7 @@
   </div>
 </body>
 </html>
+
 
 
 
