--- a/bio1.html
+++ b/bio1.html
@@ -25,6 +25,15 @@
       border-radius: 50%;
       margin-bottom: 20px;
     }
+
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
+    }
+
     a {
       display: inline-block;
       margin-top: 25px;
@@ -39,6 +48,8 @@
 </head>
 <body>
   <div class="container">
+
+    
    <h2>   شهداء الفيوم  </h2>
     <h2>  (٨ يناير / ٢٩ كيهك)  </h2>
     <h2>   El Fayoum Martyrs </h2>
@@ -233,6 +244,7 @@
   </div>
 </body>
 </html>
+
 
 
 
