--- a/bio2.html
+++ b/bio2.html
@@ -3,65 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>The Great Martyr Saint George</title>
+  <title> El Fayoum Martyrs </title>
   <style>
-    /* Base Styles */
     body {
       font-family: Arial, sans-serif;
-      background-color: #f9f9f9; /*this light gray almost white*/
-      margin: 0;
-      padding: 40px 20px;
-      line-height: 1.6;
-      color: #000; /* #000 for solid black, #333 for light black*/
+      padding: 40px;
+      background: #f9f9f9;
     }
-
     .container {
-      max-width: 700px;
+      max-width: 600px;
       margin: 0 auto;
-      background-color: #fff;
-      padding: 30px 25px;
-      border-radius: 12px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       text-align: center;
     }
-
     img {
-      width: 220px;
-      height: 220px;
-      object-fit: cover;
+      width: 200px;
+      height: 200px;
       border-radius: 50%;
-      margin: 20px 0;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-
-    h1 {
-      font-size: 28px;
-      line-height: 1.3;
       margin-bottom: 20px;
     }
 
-      h2 {
-      text-align: center;
-      /*margin-top: 30px;*/
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
       margin-bottom: 10px;
-      font-size: 1.5em; /* optional for emphasis */
-      color: navy;
-    }
-
-    p {
-      font-size: 18px;
-      margin: 15px 0;
-      text-align: left;
-    }
-
-    p.rtl {
-      text-align: right;
-      direction: rtl;
-      unicode-bidi: isolate;
-    }
-
-    strong {
-      font-weight: 600;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
     }
 
     a {
@@ -74,14 +44,12 @@
       border-radius: 5px;
       transition: background-color 0.3s ease;
     }
-
-    a:hover {
-      background-color: #0056b3;
-    }
   </style>
 </head>
 <body>
   <div class="container">
+
+    
    <h2>  القديس الشهيد أبوسيفين  </h2>
        <h2> (٥ ديسمبر / ٢٥ هاتور)  </h2>
    <h2> Saint Philopateer Mercurius </h2>
@@ -290,6 +258,7 @@
   </div>
 </body>
 </html>
+
 
 
 
