--- a/bio3.html
+++ b/bio3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> The Martyred Children of Bethlehem </title>
+  <title> El Fayoum Martyrs </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,20 +25,35 @@
       border-radius: 50%;
       margin-bottom: 20px;
     }
+
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
+    }
+
     a {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 25px;
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
       text-decoration: none;
-      color: #007bff;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
     }
   </style>
 </head>
 <body>
   <div class="container">
-   <h1> أطفال بيت لحم الشهداء  </h1>
-   <h1> (١٢ يناير / ٣ طوبة)  </h1>
-   <h1> The Martyred Children of Bethlehem  </h1>
-   <h1> (12 Jan / 3 Tuba) </h1>
+
+    
+   <h2> أطفال بيت لحم الشهداء  </h2>
+   <h2> (١٢ يناير / ٣ طوبة)  </h2>
+   <h2> The Martyred Children of Bethlehem  </h2>
+   <h2> (12 Jan / 3 Tuba) </h2>
 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Bethlehem.jpg" alt="Bethlehem">
    
@@ -78,6 +93,7 @@
   </div>
 </body>
 </html>
+
 
 
 
