--- a/bio4.html
+++ b/bio4.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Saint Eshak El-Dafrawy </title>
+  <title> El Fayoum Martyrs </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,20 +25,34 @@
       border-radius: 50%;
       margin-bottom: 20px;
     }
+
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
+    }
+
     a {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 25px;
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
       text-decoration: none;
-      color: #007bff;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
     }
   </style>
 </head>
 <body>
   <div class="container">
-   <h1> القديس الشهيد إسحق الدفراوى </h1>
-   <h1> (١٤ مايو / ٦ بشنس) </h1>
-   <h1>  Saint Eshak El-Dafrawy </h1>
-   <h1> (14 May/ 6 Bashance)</h1>
+    
+   <h2> القديس الشهيد إسحق الدفراوى </h2>
+   <h2> (١٤ مايو / ٦ بشنس) </h2>
+   <h2>  Saint Eshak El-Dafrawy </h2>
+   <h2> (14 May/ 6 Bashance)</h2>
  
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Dafrawi.jpg" alt="Dafrawi">
     
@@ -141,4 +155,5 @@
   </div>
 </body>
 </html>
+
 
