--- a/bio9.html
+++ b/bio9.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Father Mina Aboud </title>
+  <title> El Fayoum Martyrs </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,20 +25,34 @@
       border-radius: 50%;
       margin-bottom: 20px;
     }
+
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
+    }
+
     a {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 25px;
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
       text-decoration: none;
-      color: #007bff;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
     }
   </style>
 </head>
 <body>
   <div class="container">
-   <h1> القديس الشهيد أبونا مينا عبود  </h1>
-   <h1> (٦ يوليو / ٢٩ بؤونه)  </h1>
-   <h1> Father Mina Aboud </h1>
-   <h1> (6 Jul / 29 Baouna) </h1> 
+    
+   <h2> القديس الشهيد أبونا مينا عبود  </h2>
+   <h2> (٦ يوليو / ٢٩ بؤونه)  </h2>
+   <h2> Father Mina Aboud </h2>
+   <h2> (6 Jul / 29 Baouna) </h2> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Abod.jpg" alt="Abod">
 
 
@@ -130,4 +144,5 @@
   </div>
 </body>
 </html>
+
 
