--- a/bio11.html
+++ b/bio11.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Martyr Mother Dolagy and her Children </title>
+  <title> El Fayoum Martyrs </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,20 +25,164 @@
       border-radius: 50%;
       margin-bottom: 20px;
     }
+
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
+    }
+
     a {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 25px;
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
       text-decoration: none;
-      color: #007bff;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
     }
   </style>
 </head>
 <body>
   <div class="container">
-   <h1>  الأم دولاجى وأولادها الشهداء  </h1>
-   <h1> (١٤ مايو / ٦ بشنس) </h1>
-   <h1>  Martyr Mother Dolagy and her Children  </h1>
-   <h1> (14 May/ 6 Bashance) </h1> 
+
+
+    <h2> القديس الشهيد تادرس الشطبى  </h2>
+    <h2> (٢٧ يوليو / ٢٠ أبيب)  </h2>
+    <h2>  Saint Tadros El Shatby  </h2>
+    <h2>  (27 Jul / 20 Abib) </h2>
+<img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Tadros.jpg" alt="Tadros">
+   
+
+<div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">          <h2>Early Life</h2>
+  <p>
+    During the reign of King Nomarius, Prince Anastasios came to Egypt to select strong men suitable for war in the Roman army to fight the Persians. 
+    When the prince reached Upper Egypt, he admired a young man named John from the village of Tabour, part of the city of Shutb, and offered him many gifts to go with him to Antioch, but he refused to leave his homeland. 
+    In vain, his brother-in-law Kyrios, the governor of Tabour, tried to persuade the prince to leave John alone, but the prince captured John and imprisoned him in a press to prevent his escape. 
+    Following a divine vision, John agreed to leave Egypt, especially since he feared that the prince might commit acts of violence in his village because of him.
+  </p>
+  <p>
+    When John reached Antioch, King Nomarius admired him and grew fond of him. He brought him closer and even married him to Ousania, the daughter of Prince Anastasios, who was a pagan, and they had a beautiful son named Tadros. 
+    The princess discovered that John was a Christian and pressured him in every way to renounce Christ, mocking him, saying: "You deny the grace of my father, though he bought you as a servant and seated you among kings and princes, and my wife pushed you contrary to our customs." 
+    John endured this patiently for the sake of his son. Through a divine vision, he was assured that his son would be a blessing to many. He left Antioch and returned to his hometown in Upper Egypt, constantly praying for his son's faith and his own salvation with many tears.
+  </p>
+
+  <h2>In Upper Egypt</h2>
+  <p>
+    Prince Tadros longed to see his father and never ceased praying for God to fulfill this desire. An angel of the Lord appeared to him and instructed him to go to Egypt to meet his father. 
+    He took two senior soldiers, Abiphame and Discours, and traveled to Alexandria and then to Upper Egypt. God performed miracles through him on the ship, and those on board came to faith in Christ.
+  </p>
+  <p>
+    In Shutb, the locals feared that the prince had come to recruit their young men for the army. However, he and his companions entered the church to thank God. 
+    He met the church servant, an elder, and inquired about a man named "John," learning that he was still alive, old, and ill. He went to him, embraced him, and rejoiced that he had come to faith in Christ.
+  </p>
+  <p>
+    Five days later, John passed away to Paradise after blessing his son Tadros, and everyone attended his funeral, burying him next to his father Abishkhar and his sister Anfylia.
+  </p>
+
+  <h2>Tadros Returns to War and Slays the Dragon</h2>
+  <p>
+    The Persians attacked the Roman kingdom, and Diocletian summoned Tadros. He went to Antioch and fought alongside Prince Tadros of the East. Together they were victorious, and Tadros gained great favor with Diocletian, who appointed him governor of the city of Oukhtis.
+  </p>
+  <p>
+    A massive dragon terrified the city of Oukhtis. Occasionally, the people would offer it one or two children to calm it. Saint Tadros saw the Archangel inviting him to save a woman in need. 
+    He approached her, asked why she was sad, and although she was afraid to speak, when he mentioned Christ, she calmed down and told him she was a Christian. 
+    Her husband, a pagan soldier, had died, leaving her with two sons whom Tadros secretly baptized. When the husband’s people came to capture her children, the priests of the idols refused and instructed that the children be tied near where the dragon appeared. 
+    Tadros mounted his horse, prayed publicly to Jesus Christ, and killed the dragon, saving the two boys and the entire city.
+  </p>
+
+  <h2>Martyrdom</h2>
+  <p>
+    Despite the Edict of Milan in 313 AD granting religious freedom, Licinius continued to persecute Christians until Constantine defeated him in 325 AD. During this period, Prince Tadros was accused by pagan priests before King Licinius.
+  </p>
+  <p>
+    Tadros boldly declared his faith before the king. The king became enraged, ordered him whipped until his body was torn, placed him on racks to be shredded, but God supported and strengthened him. 
+    The Archangel came to assist and encourage him. Licinius tried to persuade him, but Tadros refused. The king then had him placed on an iron bed with fire beneath it. 
+    Through these sufferings, many soldiers and citizens came to believe in Christ, and countless people were martyred because of him. He was finally hanged by his feet, with his head down, and stones tied to his neck.
+  </p>
+  <p>
+    Kelkianos, the governor of Alexandria, tried to entice Tadros to worship idols during a royal visit. After much suffering, Christ appeared to him, calling him to enjoy Paradise. Finally, his head was cut off on the 20th of the month of Abib.
+  </p>
+</div>
+
+
+
+<div dir="rtl" style="text-align: right; font-size: 18px; font-family: 'Amiri', serif; line-height: 1.8;">  <h2>نشأته وحياته المبكرة</h2>
+  <p>
+    في أيام الملك نوماريوس جاء الأمير أنسطاسيوس إلى مصر ليختار رجال أشداء يصلحون للحرب في الجيش الروماني لمحاربة الفرس.
+    وإذ بلغ الأمير صعيد مصر أُعجب بشاب يدُعى يوحنا بقرية تابور التابعة لمدينة شُطب، فقدم له هدايا كثيرة ليذهب معه إلى إنطاكية فرفض مغادرة وطنه.
+    عبثًا حاول زوج أخته كيريوس والي قرية تابور إقناع الأمير بترك يوحنا، إنما قبض الأمير على يوحنا وحبسه في معصرة حتى لا يهرب،
+    وبناء على رؤيا إلهية وافق يوحنا على ترك مصر، خاصة وأنه خشي لئلا بسببه يقوم الأمير بأعمال عنف في قريته.
+  </p>
+  <p>
+    إذ بلغ يوحنا إنطاكية أحبه الملك نوماريوس وأُعجب به، فَقَرَّبَهُ إليه، بل وزوّجه بأوسانية ابنة الأمير أنسطاسيوس وكانت وثنية،
+    فأنجب منها ابنا جميلًا دُعي تادرس. اكتشفت الأميرة أن يوحنا مسيحي، فكانت تضغط عليه بكل طريقة لإنكار مسيحه، وتعيره بقولها: 
+    "إنك ناكر جميل أبي، فقد اشتراك عبدًا وأجلسك مع الملوك والأمراء، ودفعني زوجة إليك بخلاف تقاليدنا".. وكانت تهينه محتملًا بصبر من أجل ابنه حتى لا ينشأ وثنيًا.
+    وبناء على رؤيا إلهية اطمأن أن ابنه سيكون بركة لكثيرين فترك إنطاكية وعاد إلى بلده بصعيد مصر، وكان لا يكف عن الصلاة من أجل إيمان ابنه وخلاص نفسه بدموع كثيرة.
+  </p>
+
+  <h2>في صعيد مصر</h2>
+  <p>
+    شعر الأمير تادرس بشوقٍ لرؤية والده وكان لا يكف في صلاته عن الطلب من أجل تحقيق الله له هذه الرغبة.
+    ظهر له ملاك الرب وأعلن له أن يذهب إلى مصر ليلتقي بوالده، وبالفعل أخذ اثنين من كبار رجال جيشه هما أبيفام وديسقورس وذهب إلى الإسكندرية ومنها إلى الصعيد.
+    وقد أجرى الله على يديه عجائب في السفينة حتى آمن مَنْ بها بالسيد المسيح.
+  </p>
+  <p>
+    في شُطب خاف أهلها لئلا يكون قد جاء هذا الأمير ليأخذ شبابها ورجالها للجيش، أما هو فدخل مع صديقيه إلى الكنيسة يشكرون الله.
+    التقى الأمير بخادم الكنيسة الشيخ وسأله عن رجل يُدعى "يوحنا"، فعرف انه لا زال حيًا، وأنه قد شاخ وهو مريض.
+    ذهب إليه وتعّرف عليه حيث ارتمى في أحضانه، وبشره بأنه آمن بالسيد المسيح.
+  </p>
+  <p>
+    بعد خمسة أيام انتقل يوحنا إلى الفردوس بعد أن بارك ابنه تادرس، وخرج الكل يشيع جثمانه ليدفن بجوار أبيه ابيشخار وأخته أنفيليا.
+  </p>
+
+  <h2>عودة الأمير تادرس للحرب وقتل التنين</h2>
+  <p>
+    قام الفرس على مملكة الروم فأرسل دقلديانوس يستدعيه. انطلق إلى إنطاكية، ورافق الأمير تادرس المشرقي في ميدان الحرب، وكانا يعملان معًا.
+    وإذ غلبا نال الأمير تادرس الشطبي حظوة عظيمة لدى دقلديانوس، فجعله واليًا على مدينة أوخيطس.
+  </p>
+  <p>
+    كان بالمدينة تنين ضخم يرتعب منه كل أهل مدينة أوخيطس، فكانوا من فترة إلى أخرى يقدمون له طفلًا أو اثنين يبتلعهما فيهدأ.
+    رأى القديس تادرس والي المدينة رئيس الملائكة يدعوه لإنقاذ امرأة تقف من بعيد تحتاج إلى معونته.
+    وبالفعل تطلع إليها القديس وسألها عن سبب حزنها، فخافت أن تتكلم لكنه إذ ذكر اسم المسيح هدأت وأخبرته أنها إنسانة مسيحية،
+    كان رجلها جنديًا وثنيًا، مات وترك لها ابنين قامت بعمادهما سرًا. إذ ثار أهل زوجها عليها جاءت إلى هذه المدينة هاربة ومعها الولدان،
+    فأراد أهل المدينة تقديمهما للآلهة. رفض كهنة الأوثان ذلك وطلبوا من مقدمي الطفلين أن يربطوهما في شجرة بجوار الموضع الذي يظهر فيه التنين حتى متى رآهما يأكلهما فيهدأ.
+    إذ رأى القديس مرارة نفسها ركب جواده وانطلق نحو الموضع الذي يظهر فيه التنين، وعبثًا حاول رجال المدينة العظماء ثنيه عن عزمه،
+    إذ كانوا يخافون عليه من هذا الوحش الضخم العنيف. أما هو فَصَلَّى إلى ربنا يسوع المسيح علانية، وانطلق يقتل الوحش وأنقذ الولدين بل والمدينة كلها.
+  </p>
+
+  <h2>استشهاده</h2>
+  <p>
+    بالرغم من اتفاق ليسينيوس (ليكينيوس) Licinius مع الإمبراطور قسطنطين على ترك الحرية الدينية في البلاد بمقتضى مرسوم ميلان سنة 313 م،
+    لكن بقي الأول يضطهد المسيحيين بعنف حتى هزمه قسطنطين عام 325 م. في هذه الفترة استشهد الأمير تادرس،
+    الذي اشتكاه كهنة الأوثان لدى الملك ليكينيوس.
+  </p>
+  <p>
+    أعلن الأمير إيمانه أمام الملك فجنّ جنونه، وأمر بضربه بالسياط حتى تهرأ جسمه، كما وُضع على الهنبازين لتمزيقه وكان الرب يسنده ويقويه،
+    وأرسل له رئيس ملائكته ليسنده ويشجعه. حاول ليكينيوس ملاطفته عارضًا عليه الكثير فرفض،
+    فأمر بإلقائه على سرير حديدي وإيقاد نار تحته. وكان الرب يتمجد على يديه فآمن كثير من الجند والجمهور بالسيد المسيح،
+    حتى استشهدت أعداد غفيرة بسببه. عُلق برجليه منكس الرأس بعد ربط حجارة بعنقه.
+  </p>
+  <p>
+    كان كلكيانوس والي الإسكندرية في زيارة للملك فقام بدوره بملاطفة الأمير تادرس ليجتذبه إلى عبادة الأوثان.
+    وبعد عذابات كثيرة ظهر له السيد المسيح يدعوه للتمتع بالفردوس. وأخيرًا قُطعت رأسه في 20 من شهر أبيب.
+  </p>
+</div>
+    
+
+    <a href="index.html">← Back to main page</a>
+  </div>
+</body>
+</html>
+
+
+   <h2>  الأم دولاجى وأولادها الشهداء  </h2>
+   <h2> (١٤ مايو / ٦ بشنس) </h2>
+   <h2>  Martyr Mother Dolagy and her Children  </h2>
+   <h2> (14 May/ 6 Bashance) </h2> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Dolagy.jpg" alt="Dolagi">
 
 <div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">    
@@ -152,4 +296,5 @@
   </div>
 </body>
 </html>
+
 
