--- a/bio12.html
+++ b/bio12.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> St. Ana Simon the Hermit </title>
+  <title> El Fayoum Martyrs </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,20 +25,34 @@
       border-radius: 50%;
       margin-bottom: 20px;
     }
+
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
+    }
+
     a {
       display: inline-block;
-      margin-top: 20px;
+      margin-top: 25px;
+      padding: 8px 16px;
+      background-color: #007bff;
+      color: #fff;
       text-decoration: none;
-      color: #007bff;
+      border-radius: 5px;
+      transition: background-color 0.3s ease;
     }
   </style>
 </head>
 <body>
   <div class="container">
-   <h1> (١٠ أغسطس / ٤ مسرى) </h1>
-   <h1>  القديسة السائحة آنا سيمون  </h1>
-   <h1> St. Ana Simon the Hermit </h1>
-   <h1> (10 Aug / 4 Mesra) </h1> 
+    
+   <h2> (١٠ أغسطس / ٤ مسرى) </h2>
+   <h2>  القديسة السائحة آنا سيمون  </h2>
+   <h2> St. Ana Simon the Hermit </h2>
+   <h2> (10 Aug / 4 Mesra) </h2> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Simona.jpg" alt="Simona">
    
 
@@ -104,4 +118,5 @@
   </div>
 </body>
 </html>
+
 
