--- a/bio13.html
+++ b/bio13.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Saint Simon the Tanner </title>
+  <title> El Fayoum Martyrs </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,6 +25,15 @@
       border-radius: 50%;
       margin-bottom: 20px;
     }
+
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
+    }
+
     a {
       display: inline-block;
       margin-top: 25px;
@@ -39,10 +48,11 @@
 </head>
 <body>
   <div class="container">
-   <h1>  القديس سمعان الخراز  </h1>
-   <h1> (٢٨ نوفمبر / ١٨ هاتور) </h1>
-   <h1> Saint Simon the Tanner </h1>
-   <h1> (28 Nov / 18 Hatoor) </h1> 
+    
+   <h2>  القديس سمعان الخراز  </h2>
+   <h2> (٢٨ نوفمبر / ١٨ هاتور) </h2>
+   <h2> Saint Simon the Tanner </h2>
+   <h2> (28 Nov / 18 Hatoor) </h2> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Simon.jpg" alt="Zaka">
 
     
@@ -108,5 +118,6 @@
   </div>
 </body>
 </html>
+
 
 
