--- a/bio14.html
+++ b/bio14.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> Saint Afrosina </title>
+  <title> El Fayoum Martyrs </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -25,6 +25,15 @@
       border-radius: 50%;
       margin-bottom: 20px;
     }
+
+h2 {
+      /* text-align: center; */
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 1.7em; /* optional for emphasis */
+     /* color: navy; */
+    }
+
     a {
       display: inline-block;
       margin-top: 25px;
@@ -39,10 +48,10 @@
 </head>
 <body>
   <div class="container">
-   <h1> القديسة أفروسينا  </h1>
-   <h1> (١٧ فبراير / ٩ أمشير) </h1>
-   <h1>  Saint Afrosina </h1>
-   <h1> (17 Feb / 9 Amshir) </h1> 
+   <h2> القديسة أفروسينا  </h2>
+   <h2> (١٧ فبراير / ٩ أمشير) </h2>
+   <h2>  Saint Afrosina </h2>
+   <h2> (17 Feb / 9 Amshir) </h2> 
 <img src="https://raw.githubusercontent.com/DrPeterAzer/ChurchMartyrsBio_SouthCabinet/main/Images/Afro.jpg" alt="Afro">
     
 
