--- a/bio3.html
+++ b/bio3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> El Fayoum Martyrs </title>
+  <title> The Martyred Children of Bethlehem </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -59,7 +59,7 @@ h2 {
    
 
 <div dir="ltr" style="text-align: left; font-size: 18px; font-family: Arial, sans-serif; line-height: 1.8;">            <p>
-      On this day, in the second year of the birth of Christ, the children of Bethlehem were martyred. King Herod, after secretly calling the Magi and inquiring from them the exact time of the star’s appearance, sent them to Bethlehem, asking them to search carefully for the Child and report back so that he too might go and worship Him. The Magi went, found the Child with His mother, fell down, worshiped Him, and offered Him gifts: gold, frankincense, and myrrh. But as they were prepared to return to Herod, the angel of the Lord warned them in a dream not to return to him, and they departed to their country by another way.
+     In the second year of the birth of Christ, the children of Bethlehem were martyred. King Herod, after secretly calling the Magi and inquiring from them the exact time of the star’s appearance, sent them to Bethlehem, asking them to search carefully for the Child and report back so that he too might go and worship Him. The Magi went, found the Child with His mother, fell down, worshiped Him, and offered Him gifts: gold, frankincense, and myrrh. But as they were prepared to return to Herod, the angel of the Lord warned them in a dream not to return to him, and they departed to their country by another way.
     </p>
     <p>
       After their departure, an angel of the Lord appeared to Joseph in a dream, saying: "Arise, take the Child and His mother, and flee to Egypt, and remain there until I tell you; for Herod will seek the Child to destroy Him." Joseph arose, took the Child and His mother by night, and departed to Egypt, and remained there until the death of Herod, that it might be fulfilled what the Lord had spoken through the prophet: "Out of Egypt I called My Son."
@@ -93,6 +93,7 @@ h2 {
   </div>
 </body>
 </html>
+
 
 
 
