--- a/bio11.html
+++ b/bio11.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title> El Fayoum Martyrs </title>
+  <title>Martyr Mother Dolagy and her Children</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -166,6 +166,7 @@ h2 {
   </div>
 </body>
 </html>
+
 
 
 
